tests/rosetta/out/C/append-a-record-to-the-end-of-a-text-file.error
cc: exit status 1
/tmp/append-a-record-to-the-end-of-a-text-file.c: In function ‘writeTwo’:
/tmp/append-a-record-to-the-end-of-a-text-file.c:37:10: error: incompatible types when returning type ‘list_string’ but ‘int’ was expected
   37 |   return tmp1;
      |          ^~~~
/tmp/append-a-record-to-the-end-of-a-text-file.c: In function ‘appendOneMore’:
/tmp/append-a-record-to-the-end-of-a-text-file.c:46:10: error: incompatible types when returning type ‘list_string’ but ‘int’ was expected
   46 |   return tmp3;
      |          ^~~~
/tmp/append-a-record-to-the-end-of-a-text-file.c: In function ‘main’:
/tmp/append-a-record-to-the-end-of-a-text-file.c:51:25: error: incompatible type for argument 1 of ‘appendOneMore’
   51 |   lines = appendOneMore(lines);
      |                         ^~~~~
      |                         |
      |                         int
/tmp/append-a-record-to-the-end-of-a-text-file.c:40:31: note: expected ‘list_string’ but argument is of type ‘int’
   40 | int appendOneMore(list_string lines) {
      |                   ~~~~~~~~~~~~^~~~~
/tmp/append-a-record-to-the-end-of-a-text-file.c:52:12: error: request for member ‘len’ in something not a structure or union
   52 |   if (lines.len >= 3 &&
      |            ^
/tmp/append-a-record-to-the-end-of-a-text-file.c:53:12: error: request for member ‘data’ in something not a structure or union
   53 |       lines.data[2] == "xyz:x:1003:1000:X Yz,Room "
      |            ^
/tmp/append-a-record-to-the-end-of-a-text-file.c: At top level:
/tmp/append-a-record-to-the-end-of-a-text-file.c:62:5: error: redefinition of ‘main’
   62 | int main() {
      |     ^~~~
/tmp/append-a-record-to-the-end-of-a-text-file.c:49:5: note: previous definition of ‘main’ with type ‘int()’
   49 | int main() {
      |     ^~~~
